--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -2,8 +2,11 @@
 	<%= label_tag :location_type %>
   <%= text_field_tag :location_type, nil %>
 
-	<%= label_tag :address %>
-  <%= text_field_tag :address, nil %>
+	<%= label_tag :address_1 %>
+  <%= text_field_tag :address_1, nil %>
+
+  <%= label_tag :address_2 %>
+  <%= text_field_tag :address_2, nil %>
 
 	<%= label_tag :city %>
   <%= text_field_tag :city, nil %>
