--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -9,7 +9,8 @@
 	<% @locations.each do |location| %>
 		<tr>
 			<td>location.location_type</td>
-			<td>location.address</td>
+			<td>location.address_1</td>
+			<td>location.address_2</td>
 			<td>location.city</td>
 			<td>location.state</td>
 			<td>location.zip</td>
