--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -9,7 +9,8 @@
 
 		<tr>
 			<td><%= @location.location_type %></td> 
-			<td><%= @location.address %></td> 
+			<td><%= @location.address_1 %></td> 
+			<td><%= @location.address_2 %></td> 
 			<td><%= @location.city %></td> 
 			<td><%= @location.state %></td> 
 			<td><%= @location.zip %></td> 
